@@ -1,187 +1,180 @@
 package makamys.neodymium.renderer;
 
-import makamys.neodymium.Compat;
 import makamys.neodymium.Neodymium;
-import makamys.neodymium.config.NeodymiumConfig;
 import makamys.neodymium.renderer.Mesh.GPUStatus;
-import makamys.neodymium.util.ChatUtil;
 import makamys.neodymium.util.GuiHelper;
+import org.lwjgl.BufferUtils;
 
+import java.nio.ByteBuffer;
+import java.nio.IntBuffer;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
-import static makamys.neodymium.Constants.LOGGER;
+import static makamys.neodymium.config.NeodymiumConfig.bufferSizePass0;
+import static makamys.neodymium.config.NeodymiumConfig.bufferSizePass1;
+import static org.lwjgl.opengl.GL11.*;
 import static org.lwjgl.opengl.GL15.*;
+import static org.lwjgl.opengl.GL30.*;
+import static org.lwjgl.opengl.GL31.*;
 
-/** Manages dynamic memory allocation inside a fixed buffer on the GPU. */
+/** Manages dynamic memory allocation inside a buffer on the GPU. */
 public class GPUMemoryManager {
-    
-    private long bufferSize;
-    
-    public int VBO;
-    
-    private int nextMesh;
-    
-    private List<Mesh> sentMeshes = new ArrayList<>();
-    
-    private long usedVRAM;
-    private long lastUsedVRAMUpdate;
+    private static final long MEGABYTE = 1024 * 1024L;
+    private static final long[] BUFFER_SIZE_BYTES = {
+            bufferSizePass0.getIntegerValue() * MEGABYTE,
+            bufferSizePass1.getIntegerValue() * MEGABYTE
+    };
+
+    private static final int INDEX_ALLOCATION_SIZE_BYTES = 512 * 4;
+
     private static final long USED_VRAM_UPDATE_RATE = 1_000_000_000L;
-    
-    private static final long MAX_VRAM_FULLNESS_INTERVAL = 30L * 1_000_000_000L;
-    private static long lastVRAMFullness = -1;
-    
-    public GPUMemoryManager() {
-        VBO = glGenBuffers();
-        
-        bufferSize = ((long) NeodymiumConfig.VRAMSize.getIntegerValue()) * 1024 * 1024;
-        
-        glBindBuffer(GL_ARRAY_BUFFER, VBO);
-        
-        glBufferData(GL_ARRAY_BUFFER, bufferSize, GL_DYNAMIC_DRAW);
-        
-        glBindBuffer(GL_ARRAY_BUFFER, 0);
+
+    private static int copyBuffer = GL_ZERO;
+    private static long copyBufferSize = 0;
+
+    private final List<Mesh> sentMeshes = new ArrayList<>();
+
+    private final long bufferSizeBytes;
+
+    public final int managerIndex;
+    public final int pass;
+    public final int drawMode;
+    public final int verticesPerPolygon;
+
+    private int indexSize;
+
+    private int nextMesh = 0;
+
+    private long usedVRAM = 0;
+    private long lastUsedVRAMUpdate = 0;
+
+    public int VAO = GL_ZERO;
+    public int VBO = GL_ZERO;
+
+    public IntBuffer piFirst = null;
+    public IntBuffer piCount = null;
+
+    public GPUMemoryManager(int managerIndex, int pass, int drawMode, int verticesPerPolygon) throws Exception {
+        this.bufferSizeBytes = BUFFER_SIZE_BYTES[pass];
+
+        this.managerIndex = managerIndex;
+        this.pass = pass;
+        this.drawMode = drawMode;
+        this.verticesPerPolygon = verticesPerPolygon;
+
+        try {
+            this.VBO = createVBO(bufferSizeBytes);
+            this.VAO = createVAO();
+        } catch (Exception e) {
+            destroyImpl();
+            throw e;
+        }
+
+        this.indexSize = INDEX_ALLOCATION_SIZE_BYTES;
+
+        reAllocIndexBuffers();
+        piFirst.flip();
+        piCount.flip();
     }
-    
-    public void runGC(boolean full) {
-        glBindBuffer(GL_ARRAY_BUFFER, VBO);
-        
-        int moved = 0;
-        int timesReachedEnd = 0;
-        int checksLeft = sentMeshes.size();
-        
-        final int MB256 = 256 * 1024 * 1024;
-        
-        int panicRate = (int)(((float)Math.max(MB256 - (bufferSize - end()), 0) / (float)MB256) * 64f);
-        
-        while((!full && (moved < (4 + panicRate) && checksLeft-- > 0)) || (full && timesReachedEnd < 2) && !sentMeshes.isEmpty()) {
-            nextMesh++;
-            if(nextMesh >= sentMeshes.size()) {
-                nextMesh = 0;
-                timesReachedEnd++;
-            }
-            Mesh mesh = sentMeshes.get(nextMesh);
-            
-            if(mesh.gpuStatus == GPUStatus.SENT) {
-                long offset = nextMesh == 0 ? 0 : sentMeshes.get(nextMesh - 1).getEnd();
-                if(mesh.offset != offset) {
-                    glBufferSubData(GL_ARRAY_BUFFER, offset, mesh.buffer);
-                    moved++;
-                }
-                mesh.iFirst = (int)(offset / mesh.getStride());
-                mesh.offset = offset;
-            } else if(mesh.gpuStatus == GPUStatus.PENDING_DELETE) {
-                mesh.iFirst = -1;
-                mesh.offset = -1;
-                mesh.visible = false;
-                mesh.gpuStatus = GPUStatus.UNSENT;
-                
-                sentMeshes.remove(nextMesh);
-                
-                mesh.destroyBuffer();
-                
-                if(nextMesh > 0) {
-                    nextMesh--;
-                }
-            }
-        }
-        
-        glBindBuffer(GL_ARRAY_BUFFER, 0);
-    }
-    
-    private long end() {
-        return (sentMeshes.isEmpty() ? 0 : sentMeshes.get(sentMeshes.size() - 1).getEnd());
-    }
-    
-    public void sendMeshToGPU(Mesh mesh) {
-        if(mesh == null || mesh.buffer == null) {
-            return;
-        }
-        
-        if(end() + mesh.bufferSize() >= bufferSize) {
-            runGC(true);
-        }
-        
-        if(end() + mesh.bufferSize() >= bufferSize) {
-            Neodymium.renderer.destroyPending = true;
-            
-            long t = System.nanoTime();
-            
-            if(lastVRAMFullness != -1 && t - lastVRAMFullness < MAX_VRAM_FULLNESS_INTERVAL) {
-                ChatUtil.showNeoChatMessage("VRAM keeps getting full! Reverting to vanilla renderer. Try increasing the VRAM buffer size in the config, if possible.", ChatUtil.MessageVerbosity.ERROR, false);
-                Compat.onNotEnoughVRAM(NeodymiumConfig.VRAMSize.getIntegerValue());
-            } else {
-                LOGGER.debug("Reloading renderer because VRAM is full.");
-                // TODO restart renderer with more VRAM allocated when this happens.
-            }
-            lastVRAMFullness = t;
-            return;
-        }
-        
-        int size = mesh.bufferSize();
-        int insertIndex = -1;
-        
-        long nextBase = -1;
+
+    public boolean uploadMesh(Mesh mesh) {
+        if(mesh == null || mesh.buffer == null || mesh.verticesPerPolygon != verticesPerPolygon)
+            return false;
+
+        if(end() + mesh.bufferSize() >= bufferSizeBytes)
+            return false;
+
+        final int size = mesh.bufferSize();
+        var insertIndex = -1;
+
+        var nextBase = -1L;
         if(!sentMeshes.isEmpty()) {
             if(nextMesh < sentMeshes.size() - 1) {
-                Mesh next = sentMeshes.get(nextMesh);
-                Mesh nextnext = null;
-                for(int i = nextMesh + 1; i < sentMeshes.size(); i++) {
-                    Mesh m = sentMeshes.get(i);
-                    if(m.gpuStatus == Mesh.GPUStatus.SENT) {
-                        nextnext = m;
+                final Mesh meshA = sentMeshes.get(nextMesh);
+                Mesh meshB = null;
+                for(var i = nextMesh + 1; i < sentMeshes.size(); i++) {
+                    final Mesh meshC = sentMeshes.get(i);
+                    if(meshC.gpuStatus == Mesh.GPUStatus.SENT) {
+                        meshB = meshC;
                         break;
                     }
                 }
-                if(nextnext != null && nextnext.offset - next.getEnd() >= size) {
-                    nextBase = next.getEnd();
+                if(meshB != null && meshB.offset - meshA.getEnd() >= size) {
+                    nextBase = meshA.getEnd();
                     insertIndex = nextMesh + 1;
                 }
             }
-            
-            if(nextBase == -1) {
+
+            if(nextBase == -1)
                 nextBase = sentMeshes.get(sentMeshes.size() - 1).getEnd();
-            }
         }
-        if(nextBase == -1) nextBase = 0;
-        
-        
-        if(mesh.gpuStatus == GPUStatus.UNSENT) {
-            mesh.prepareBuffer();
-            
-            glBindBuffer(GL_ARRAY_BUFFER, VBO);
-            
-            glBufferSubData(GL_ARRAY_BUFFER, nextBase, mesh.buffer);
-            mesh.iFirst = (int)(nextBase / mesh.getStride());
-            mesh.iCount = mesh.quadCount * 4;
-            mesh.offset = nextBase;
-            
-            if(insertIndex == -1) {
+        if (nextBase == -1)
+            nextBase = 0;
+
+        if (mesh.gpuStatus == GPUStatus.UNSENT) {
+            uploadMeshToVBO(mesh, nextBase);
+
+            if (insertIndex == -1) {
                 sentMeshes.add(mesh);
             } else {
                 sentMeshes.add(insertIndex, mesh);
                 nextMesh = insertIndex;
             }
-            
-            glBindBuffer(GL_ARRAY_BUFFER, 0);
         }
-        
+
         mesh.gpuStatus = GPUStatus.SENT;
+        mesh.attachedManager = this;
+        return true;
     }
-    
-    public void deleteMeshFromGPU(Mesh mesh) {
-        if(mesh == null || mesh.gpuStatus == GPUStatus.UNSENT) {
+
+    public void deleteMesh(Mesh mesh) {
+        if(mesh == null || mesh.gpuStatus == GPUStatus.UNSENT)
             return;
-        }
         mesh.gpuStatus = GPUStatus.PENDING_DELETE;
+        mesh.attachedManager = null;
     }
 
-    public void destroy() {
-        glDeleteBuffers(VBO);
+    public void growIndexBuffers() {
+        indexSize *= 1.5F;
+
+        reAllocIndexBuffers();
+
+        piFirst.limit(piFirst.capacity());
+        piCount.limit(piCount.capacity());
     }
 
-    public List<String> getDebugText() {
-        long t = System.nanoTime();
+    public void runGC(boolean full) {
+        var moved = 0;
+        var timesReachedEnd = 0;
+        var checksLeft = sentMeshes.size();
+
+        while ((!full && moved < 32 && checksLeft > 0) || full && timesReachedEnd < 2 && !sentMeshes.isEmpty()) {
+            checksLeft--;
+            nextMesh++;
+            if (nextMesh >= sentMeshes.size()) {
+                nextMesh = 0;
+                timesReachedEnd++;
+            }
+            final Mesh mesh = sentMeshes.get(nextMesh);
+
+            if (mesh.gpuStatus == GPUStatus.SENT) {
+                final long offset = nextMesh == 0 ? 0 : sentMeshes.get(nextMesh - 1).getEnd();
+                if (mesh.offset != offset) {
+                    moveMeshInVBO(mesh, offset);
+                    moved++;
+                }
+            } else if (mesh.gpuStatus == GPUStatus.PENDING_DELETE) {
+                deleteMeshFromVBO(mesh);
+                sentMeshes.remove(nextMesh);
+                if (nextMesh > 0)
+                    nextMesh--;
+            }
+        }
+    }
+
+    public List<String> debugText() {
+        final long t = System.nanoTime();
         if(t - lastUsedVRAMUpdate > USED_VRAM_UPDATE_RATE) {
             usedVRAM = 0;
             for(Mesh mesh : sentMeshes) {
@@ -189,20 +182,19 @@ public class GPUMemoryManager {
             }
             lastUsedVRAMUpdate = t;
         }
-        return List.of("VRAM: " + (usedVRAM / 1024 / 1024) + "MB (" + (end() / 1024 / 1024) + "MB) / " + (bufferSize / 1024 / 1024) + "MB");
+        return Collections.singletonList("PASS " + pass + ": " + (usedVRAM / 1024 / 1024) + "MB (" + (end() / 1024 / 1024) + "MB) / " + (bufferSizeBytes / 1024 / 1024) + "MB");
     }
 
-    public void drawInfo() {
+    public int drawDebugInfo(int yOff) {
         int scale = 10000;
         int rowLength = 512;
-        int yOff = 20;
-        
-        int height = (int)(bufferSize / scale) / rowLength;
+
+        int height = (int)(bufferSizeBytes / scale) / rowLength;
         GuiHelper.drawRectangle(0, yOff, rowLength, height, 0x000000, 50);
-        
+
         int meshI = 0;
         for(Mesh mesh : sentMeshes) {
-            
+
             int o = (int)(mesh.offset / 10000);
             int o2 = (int)((mesh.offset + mesh.bufferSize()) / 10000);
             if(o / rowLength == o2 / rowLength) {
@@ -220,12 +212,167 @@ public class GPUMemoryManager {
             }
             meshI++;
         }
-        GuiHelper.drawRectangle(0, yOff, 4, 4, 0x00FF00);
-        GuiHelper.drawRectangle((int)(bufferSize / scale) % rowLength, (int)(bufferSize / scale) / rowLength + yOff, 4, 4, 0xFF0000);
+        GuiHelper.drawRectangle(0 % rowLength, 0 + yOff, 4, 4, 0x00FF00);
+        GuiHelper.drawRectangle((int)(bufferSizeBytes / scale) % rowLength, (int)(bufferSizeBytes / scale) / rowLength + yOff, 4, 4, 0xFF0000);
+        return (int)(bufferSizeBytes / scale) / rowLength + yOff;
+    }
+
+    public void destroy() {
+        destroyCopyBuffer();
+
+        if (Neodymium.renderer != null) {
+            NeoRenderer.submitTask(this::destroyImpl, 60);
+        } else {
+            destroyImpl();
+        }
+    }
+
+    private void uploadMeshToVBO(Mesh mesh, long offset) {
+        mesh.prepareBuffer();
+        if (mesh.bufferSize() > 0)
+            copyBytesToVBO(offset, mesh.buffer);
+
+        mesh.iFirst = (int) (offset / Neodymium.renderer.getStride());
+        mesh.iCount = mesh.polygonCount * verticesPerPolygon;
+        mesh.offset = offset;
+    }
+
+    private void deleteMeshFromVBO(Mesh mesh) {
+        deleteBytesFromVBO(mesh.offset, mesh.bufferSize());
+        mesh.iFirst = -1;
+        mesh.offset = -1;
+        mesh.visible = false;
+        mesh.gpuStatus = GPUStatus.UNSENT;
+        mesh.destroyBuffer();
+    }
+
+    private void reAllocIndexBuffers() {
+        piFirst = refreshIntBuffer(piFirst, BufferUtils.createByteBuffer(indexSize * verticesPerPolygon).asIntBuffer());
+        piCount = refreshIntBuffer(piCount, BufferUtils.createByteBuffer(indexSize * verticesPerPolygon).asIntBuffer());
+    }
+
+    private void moveMeshInVBO(Mesh mesh, long newOffset) {
+        moveBytesInVBO(mesh.offset, newOffset, mesh.bufferSize());
+        mesh.iFirst = (int) (newOffset / Neodymium.renderer.getStride());
+        mesh.offset = newOffset;
+    }
+
+    private void copyBytesToVBO(long offset, ByteBuffer bytes) {
+        if (bytes.remaining() == 0)
+            return;
+
+        glBindBuffer(GL_ARRAY_BUFFER, VBO);
+        glBufferSubData(GL_ARRAY_BUFFER, offset, bytes);
+        glBindBuffer(GL_ARRAY_BUFFER, GL_ZERO);
     }
     
-    public float getCoherenceRate() {
-        return (float)ChunkMesh.usedRAM / (float)end();
+    private void moveBytesInVBO(long sourceOffsetBytes, long targetOffsetBytes, long sizeBytes) {
+        if (sizeBytes == 0)
+            return;
+
+        final long targetEndBytes = targetOffsetBytes + sizeBytes;
+        final long sourceEndBytes = sourceOffsetBytes + sizeBytes;
+
+        glBindBuffer(GL_ARRAY_BUFFER, VBO);
+        if (sourceOffsetBytes <= targetEndBytes && sourceEndBytes >= targetOffsetBytes) {
+            prepareCopyBuffer(sizeBytes);
+                    
+            glBindBuffer(GL_COPY_WRITE_BUFFER, copyBuffer);
+            
+            glCopyBufferSubData(GL_ARRAY_BUFFER, GL_COPY_WRITE_BUFFER, sourceOffsetBytes, 0, sizeBytes);
+            glCopyBufferSubData(GL_COPY_WRITE_BUFFER, GL_ARRAY_BUFFER, 0, targetOffsetBytes, sizeBytes);
+            glBindBuffer(GL_COPY_WRITE_BUFFER, GL_ZERO);
+        } else {
+            glCopyBufferSubData(GL_ARRAY_BUFFER, GL_ARRAY_BUFFER, sourceOffsetBytes, targetOffsetBytes, sizeBytes);
+        }
+        glBindBuffer(GL_ARRAY_BUFFER, GL_ZERO);
     }
-    
+
+    private void deleteBytesFromVBO(long offsetBytes, long sizeBytes) {
+        // NO-OP
+    }
+
+    private long end() {
+        return sentMeshes.isEmpty() ? 0 : sentMeshes.get(sentMeshes.size() - 1).getEnd();
+    }
+
+    private void destroyImpl() {
+        if (VAO != GL_ZERO) {
+            glDeleteVertexArrays(VAO);
+            VAO = GL_ZERO;
+        }
+        if (VBO != GL_ZERO) {
+            glDeleteBuffers(VBO);
+            VBO = GL_ZERO;
+        }
+    }
+
+    private static int createVBO(long sizeBytes) throws Exception {
+        flushGLError();
+
+        final int vbo = glGenBuffers();
+        if (vbo == GL_ZERO)
+            throw new Exception("Failed to create new VBO");
+
+        glBindBuffer(GL_ARRAY_BUFFER, vbo);
+        glBufferData(GL_ARRAY_BUFFER, sizeBytes, GL_DYNAMIC_DRAW);
+        glBindBuffer(GL_ARRAY_BUFFER, GL_ZERO);
+
+        if (checkGLError()) {
+            glDeleteBuffers(vbo);
+            throw new Exception("Failed to allocate " + sizeBytes + " bytes for new VBO");
+        }
+
+        return vbo;
+    }
+
+    private static int createVAO() throws Exception {
+        final int vao = glGenVertexArrays();
+        if (vao == GL_ZERO)
+            throw new Exception("Failed to create vertex array");
+        return vao;
+    }
+
+    private static void flushGLError() {
+        while (glGetError() != GL_NO_ERROR) ;
+    }
+
+    private static boolean checkGLError() {
+        return glGetError() != GL_NO_ERROR;
+    }
+
+    private static IntBuffer refreshIntBuffer(IntBuffer oldBuf, IntBuffer newBuf) {
+        if (oldBuf != null) {
+            newBuf.position(oldBuf.position());
+        }
+        return newBuf;
+    }
+
+    private static void prepareCopyBuffer(long requiredSizeBytes) {
+        if (copyBufferSize >= requiredSizeBytes)
+            return;
+
+        if (copyBuffer == GL_ZERO)
+            copyBuffer = glGenBuffers();
+        copyBufferSize = next16Megabyte(requiredSizeBytes);
+
+        glBindBuffer(GL_COPY_WRITE_BUFFER, copyBuffer);
+        glBufferData(GL_COPY_WRITE_BUFFER, copyBufferSize, GL_DYNAMIC_COPY);
+        glBindBuffer(GL_COPY_WRITE_BUFFER, GL_ZERO);
+    }
+
+    private static void destroyCopyBuffer() {
+        if (copyBuffer == GL_ZERO)
+            return;
+
+        glDeleteBuffers(copyBuffer);
+        copyBuffer = GL_ZERO;
+        copyBufferSize = 0;
+    }
+
+    private static long next16Megabyte(long size) {
+        final long sixteenMegs = 16 * MEGABYTE;
+        final long increments = size / sixteenMegs + 1;
+        return increments * sixteenMegs;
+    }
 }
